[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serenity-killer-playbook"
version = "0.1.0"
description = "OSINT investing pipeline that scores AI/semiconductor supply-chain chokepoints against an 11-step playbook."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "wzhaoMS" }]
dependencies = [
    "requests>=2.32",
    "feedparser>=6.0.11",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "tenacity>=8.5",
    "yfinance>=0.2.50",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "streamlit>=1.40",
    "pandas>=2.2",
    "altair>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
serenity = "src.cli:main"

[tool.setuptools]
packages = ["src", "src.scrapers", "src.enrich"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = [
    "E501",   # line length handled pragmatically
    "B008",   # function calls in argument defaults (argparse patterns)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # sys.path manipulation before imports in tests
